
[tool.poetry]
name = "load_profile"
version = "0.1.0"
description = "This repo is a general tool for load anaysis."
authors = ["karin.wu"]
readme = "README.md"
packages = [{include = "representative_load_shape"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
dask = "2023.12.0"
python = ">=3.10,<3.12"
pandas = "^2.1.3"
pandera = "0.17.2"
pathy = "0.10.2"
pyarrow = "14.0.1"
dbt = "^1.0.0.35.4"
dbt-bigquery = "^1.7.2"
dbt-core = "^1.7.4"
omegaconf = "^2.3.0"
tslearn = "^0.6.3"
pandas-gbq = "^0.22.0"
gcsfs = "^2024.2.0"
db-dtypes = "^1.2.0"

[tool.poetry.group.evaluation.dependencies]
streamlit = "1.28.2"
plotly = "5.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.training.dependencies]
scikit-learn = "1.3.0"

[tool.poetry.group.plotting.dependencies]
matplotlib = "^3.7.1"
seaborn = "^0.13.0"

[tool.poetry.group.test.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest_cov = "4.1.0"
hypothesis = "^6.81.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79



















[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
MarkupSafe = "2.0.1"

[tool.poetry_bumpversion.file."scada_ami_comparison/__init__.py"]
